alignment fix

--- a/index.css
+++ b/index.css
@@ -152,6 +152,7 @@ h1{
 .card{
     background-color: transparent !important;
     color: white;
+    text-align: center;
     /* display: flex;
     flex-direction: column;
     flex-wrap: wrap; */
@@ -233,8 +234,7 @@ a img{
     }
     
     .card{
-        margin: 0;
-        padding: 0;
+        text-align: left;
     }
     
     .card-text{
@@ -279,7 +279,9 @@ a img{
     .social-links img, .useful-links img{
         margin: 0;
     }
-    
+    .card{
+        text-align: left;
+    }
 }
 
 
